--- a/NODE.js/src/views/layouts/main.hbs
+++ b/NODE.js/src/views/layouts/main.hbs
@@ -15,15 +15,15 @@
  
   </head>
   <body class="bg-gray-100">
-    <nav class="flex py-5 big-green-500 text-white px/24" style="background-color: rgb(13, 145, 24);">
+    <nav class="flex py-5 bg-blue-800 text-white px/24">
     <div class="w-1/2 px-12 mr-auto">
-        <p class="text-2x1 font-bold">SISTEMA DAGAJ</p>
+        <p class="text-4xl font-bold">SISTEMA DAGAJ</p>
     </div>
 
     <ul class="w-1/2 px-16 ml-auto flex justify-end pt-1">
 
         <li class="nav-item px-4">
-            <a href="/create" class="nav-link font-semibold border-2 border-white hover:text-green-700 hover:bg-white py-3 px-4 
+            <a href="/create" class="nav-link font-bold border-2 border-white hover:text-blue-700 hover:bg-white py-1 px-2 
             rounded-md">AGREGAR USUARIO</a>
         </li>
         
