--- a/NODE.js/src/views/tasks/create.hbs
+++ b/NODE.js/src/views/tasks/create.hbs
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear usuario</title>
     <link rel="stylesheet" type="text/css" href="css/estiloRegistro.css">
+
 </head>
 <body>
 
 <header>
-    <div class="block mx-auto my-12 p-8 bg-white w-1/3 border border-gray-200 w-full text-lg placeholder-gray-800">
+    <div class="block mx-auto my-8 p-4 bg-white w-1/3 border border-gray-200 w-full text-lg placeholder-gray-800">
         <h1 class="text-center text-3xl font-bold">Crear Usuario</h1>
+        <div class="text-center text-1xl font-bold">
+            <br>
+            <a href="/" class="font-bold bg-red-500 text-1xl text-white hover:bg-red-700 px-4 py-2 text-center rounded-md
+            mx-auto">Regresar</a>
+        </div>
     </div>
     <div class="container">
     <div class="formulario" style="text-align: center;">
@@ -34,8 +40,8 @@
             <label for="telefono">Telefono:</label>
             <input type="text" id="telefono" name="telefono" required placeholder="Ingrese el telefono" pattern="\d+" minlength="10" maxlength="10">
             <br><br> 
-            <button type="submit" class="rounded-md bg-green-500 w-full text-lg text-white font-semibold p-2 my-3
-            hover:bg-green-600 focus:bg-green-700">Guardar</button>
+            <button type="submit" class="text-center rounded-md bg-blue-500 text-lg text-white font-semibold p-2 my-2
+            hover:bg-blue-600">Guardar</button>
         </form>
     </div>
 </div>
