--- a/NODE.js/src/views/tasks/edit.hbs
+++ b/NODE.js/src/views/tasks/edit.hbs
@@ -9,13 +9,19 @@
 <body>
 
 <header>
-    <div class="block mx-auto my-12 p-8 bg-white w-1/3 border border-gray-200 w-full text-lg placeholder-gray-800">
+    <div class="block mx-auto my-8 p-4 bg-white w-1/3 border border-gray-200 w-full text-lg placeholder-gray-800">
         <h1 class="text-center text-3xl font-bold">Editar Usuario</h1>
+        <div class="text-center text-1xl font-bold">
+            <br>
+        <a href="/tasks" class="font-bold bg-red-500 text-1xl text-white hover:bg-red-700 px-4 py-2 text-center rounded-md
+    mx-auto">Cancelar</a>
+        </div>
         {{#each usuarios}}
     </div>
     <div class="container">
     <div class="formulario" style="text-align: center;">
-        <h2>Ingreso de datos</h2>
+        <h1>Ingreso de datos</h1>
+        <br>
         <form action="" method="POST">
             <label for="ci">Cédula:</label>
             <input type="text" id="ci" name="ci" required value="{{ci}}" pattern="\d+" minlength="10" maxlength="10">
@@ -35,8 +41,8 @@
             <label for="telefono">Telefono:</label>
             <input type="text" id="telefono" name="telefono" required value="{{telefono}}" pattern="\d+" minlength="10" maxlength="10">
             <br><br> 
-            <button type="submit" class="rounded-md bg-green-500 w-full text-lg text-white font-semibold p-2 my-3
-            hover:bg-green-600 focus:bg-green-700">Guardar</button>
+            <button type="submit" class="text-center rounded-md bg-blue-500 text-lg text-white font-semibold p-2 my-2
+            hover:bg-blue-600">Guardar</button>
         </form>
         {{/each}}
     </div>
