--- a/NODE.js/src/views/tasks/index.hbs
+++ b/NODE.js/src/views/tasks/index.hbs
@@ -1,16 +1,25 @@
 <div class="max-w-7x1 mx-auto sm:px-6 lg:px-8">
+    <div class="block mx-auto my-8 p-4 bg-white w-1/3 border border-gray-200 w-full text-lg placeholder-gray-800">
+        <h1 class="text-center text-3xl font-bold">Lista de Usuarios</h1>
+        <div class="text-center text-1xl font-bold">
+            <br>
+        <a href="/" class="font-bold bg-red-500 text-1xl text-white hover:bg-red-700 px-4 py-2 text-center rounded-md
+    mx-auto">Regresar</a>
+        </div>
+    </div>
+    
     <div class="bg-white overfloe-hidden shadow-x1 sm:rounded-lg mt-12">
 
         <table class="table-fixed w-full">
             <thead>
-                <tr class="bg-green-500 text white">
-                   <th class="w-15 py-4 ...">CI</th>
-                   <th class="w-15 py-4 ...">Nombre</th>
-                   <th class="w-15 py-4 ...">Apellido</th>
-                   <th class="w-15 py-4 ...">Ocupación</th>
-                   <th class="w-15 py-4 ...">Dirección</th>
-                   <th class="w-15 py-4 ...">Teléfono</th>                
-                   <th class="w-15 py-4 ...">Acciones</th>
+                <tr class="bg-blue-400 text white">
+                   <th class="w-15 py-2 ...">CI</th>
+                   <th class="w-15 py-2 ...">Nombre</th>
+                   <th class="w-15 py-2 ...">Apellido</th>
+                   <th class="w-15 py-2 ...">Ocupación</th>
+                   <th class="w-15 py-2 ...">Dirección</th>
+                   <th class="w-15 py-2 ...">Teléfono</th>                
+                   <th class="w-15 py-2 ...">Acciones</th>
 
                 </tr>
             </thead>
@@ -27,12 +36,12 @@
                     <td class="flex">
                         <form action="/tasks/delete" method="POST" class="mx-2">
                             <input type="hidden" value="{{ci}}" name="ci">
-                            <button class="bg-red-500 text-white px-3 py-1 rounded-sm" type="submit">
+                            <button class="bg-red-400 hover:bg-red-500 text-white px-3 py-1 rounded-sm" onclick="showConfirmation('{{ci}}')">
                                 <i class="fas fa-trash"></i></button>
                         </form>
                        
-                        <a href="/tasks/edit/{{ci}}" class="bg-green-500 text-white px-3 py-1 rounded-sm">
-                            <i class="fas fa-pen"></i></a>
+                        <a href="/tasks/edit/{{ci}}" class="bg-green-400 hover:bg-green-500 text-white px-3 py-1 rounded-sm">
+                            <i class="fas fa-pencil"></i></a>
                     </td>
                 </tr>
                 {{/each}}
@@ -41,3 +50,5 @@
         </table>
     </div>
 </div>
+
+
